@@ -12,6 +12,8 @@ VERSION 3.2.82 UNRELEASED
 
   BUGFIXES:
    * Partially re-enable cue file support
+   * Prevent concurrent scan result processings from taking place to avoid
+     potential database issues
 
 VERSION 3.2.81
   FEATURES:
